<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_cell"
    android:orientation="vertical"
    android:padding="5dp"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/text_margin"
      android:layout_marginTop="5dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/tvItemName"
        android:maxLines="2"
        android:text="wopay01应用监控"
        style="@style/item_text_style"
        />

    <TextView
        android:id="@+id/tvItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_bg"
        android:padding="3dp"
        android:text="@string/item_alarm_count"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/text_margin"
      android:layout_marginTop="5dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/tvItemContent"
        android:text="联通支付扣"
        style="@style/item_text_style"
        />
    <TextView
        android:id="@+id/tvContentIP"
        android:text="10.138.51.90"
        style="@style/item_text_style"
        />
    <TextView
        android:id="@+id/tvContentServer"
        android:text="Tomcat01"
        style="@style/item_text_style"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:layout_marginStart="@dimen/text_margin"
      android:layout_marginTop="5dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/tvItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_long_average_time_hint"
        android:textColor="@color/black"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/tvItemTimeNear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/item_near_last_day"
        android:textColor="@color/black"
        android:textSize="12sp"
        />

  </LinearLayout>

</LinearLayout>
