<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_cell"
    >
  <View
      android:id="@+id/blank"
      android:layout_width="8dp"
      android:layout_height="match_parent"
      android:background="@color/colorPrimary"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:id="@+id/tvItemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/text_bg"
        android:padding="5dp"
        android:text="1223331"
        android:textSize="12dp"
        />
    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/tvItemNumber"
        android:background="@drawable/text_bg"
        android:padding="5dp"
        android:text="1223331"
        android:textSize="12dp"
        />
    <TextView
        android:id="@+id/tvItemPeopleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/tvItemName"
        android:padding="5dp"
        android:text="zabbix"
        android:textColor="@color/black"
        android:textSize="12dp"
        />
    <TextView
        android:id="@+id/tvItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="07-12 09:58"
        android:textSize="12dp"
        />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvItemNumber"
        android:layout_margin="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:singleLine="true"
        >
      <TextView
          android:id="@+id/tvItemStartTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="1级事件"
          android:textColor="@color/black"
          android:textSize="12dp"
          />

      <TextView
          android:id="@+id/tvItemEndTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:text="应用类"
          android:textColor="@color/black"
          android:textSize="12dp"
          />


    </LinearLayout>
    <TextView
        android:id="@+id/tvItemServer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llContent"
        android:layout_margin="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:singleLine="true"
        android:text="ZAbbix server"
        android:textColor="@color/black"
        android:textSize="15dp"
        />

    <LinearLayout
        android:id="@+id/tvItemPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvItemServer"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        >
      <TextView
          android:id="@+id/tvItemLook"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="内存监控"
          android:textColor="@color/black"
          android:textSize="14sp"
          />
      <TextView
          android:id="@+id/tvItemMemory"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="end"
          android:text="95%"
          android:textColor="@android:color/holo_red_dark"
          android:textSize="18sp"
          android:visibility="gone"
          />
    </LinearLayout>

    <TextView
        android:id="@+id/tvItemMan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvItemPurpose"
        android:layout_margin="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:singleLine="true"
        android:text="分配给:aaa,bbb,ccc"
        android:textSize="12dp"
        />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tvItemMan"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewLine"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/bntYes"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/item_selector"
          android:text="@string/action_yes"
          android:textStyle="bold"
          />
      <View
          android:id="@+id/view1"
          android:layout_width="0.5dp"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:layout_gravity="center_vertical"
          android:background="@color/colorPrimary"
          />
      <Button
          android:id="@+id/bntCompile"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/item_selector"
          android:text="@string/action_compile"
          android:textStyle="bold"
          />
      <View
          android:layout_width="0.5dp"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:layout_gravity="center_vertical"
          android:background="@color/colorPrimary"
          />
      <Button
          android:id="@+id/bntClose"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/item_selector"
          android:text="@string/item_close"
          android:textStyle="bold"
          />
    </LinearLayout>
    <TextView
        android:id="@+id/tvItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvItemTime"
        android:layout_alignTop="@+id/llContent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/text_bg"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:text="1次"
        android:textColor="@color/black"
        />

  </RelativeLayout>

</LinearLayout>